# HackUDC-project-MVP

backend/: .env  README.md  database.db  main.py  pyproject.toml
backend/core/: categorizer.py  config.py  models.py  ollama_embedder.py  ollama_tagger.py  prompts.py
backend/db/: database.py
backend/models/: elements.py  job.py
backend/routers/: category.py  job.py  message.py
backend/schemas/: elements.py  job.py
frontend/: index.html  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: BrowseView.tsx  ChatView.tsx  MindmapView.tsx  SuggestionsPanel.tsx  ThemeToggle.tsx  ViewSwitcher.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: brain.ts
ollama/: createModel.sh  docker-compose.yml  pullModel.sh  setup.sh
